src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__arrays__circular_array_type_aliases_ab.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error[E029]: Recursive data structure `a -> b -> a` has infinite size
  ┌─ <internal>:2:18
  │
2 │             TYPE a : ARRAY[0..10] OF b; END_TYPE
  │                  ^ Recursive data structure `a -> b -> a` has infinite size
3 │             TYPE b : ARRAY[0..10] OF a; END_TYPE
  │                  - see also
